// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Menu (compound/context) > renders basic menu correctly 1`] = `
<DocumentFragment>
  <button
    aria-controls="menu-content"
    aria-expanded="false"
    aria-haspopup="menu"
    type="button"
  />
  <button
    aria-disabled="false"
    aria-label="Open menu"
    class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none bg-coral text-white hover:bg-coral/90 focus-visible:ring-coral-soft focus-visible:ring-offset-white shadow-sm hover:shadow-md h-10 w-10 rounded-md"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-ellipsis-vertical inline-flex items-center justify-center w-5 h-5 text-neutral"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="1"
      />
      <circle
        cx="12"
        cy="5"
        r="1"
      />
      <circle
        cx="12"
        cy="19"
        r="1"
      />
    </svg>
  </button>
  <div
    aria-hidden="true"
    class="min-w-40 bg-neutral-50 text-black rounded-lg shadow-md border border-transparent py-2.5 absolute z-50 transition-opacity duration-150 ease-out opacity-0"
    id="menu-content-«r0»"
    role="menu"
    style="top: 0px; left: 0px;"
    tabindex="-1"
  />
</DocumentFragment>
`;

exports[`Menu (compound/context) > renders menu with different sizes 1`] = `
<DocumentFragment>
  <div
    class="flex gap-4"
  >
    <button
      aria-controls="menu-content"
      aria-expanded="false"
      aria-haspopup="menu"
      type="button"
    />
    <button
      aria-disabled="false"
      aria-label="Open small menu"
      class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none bg-coral text-white hover:bg-coral/90 focus-visible:ring-coral-soft focus-visible:ring-offset-white shadow-sm hover:shadow-md h-10 w-10 rounded-md"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis-vertical inline-flex items-center justify-center w-5 h-5 text-neutral"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="12"
          cy="5"
          r="1"
        />
        <circle
          cx="12"
          cy="19"
          r="1"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="min-w-40 bg-neutral-50 text-black rounded-lg shadow-md border border-transparent py-2 absolute z-50 transition-opacity duration-150 ease-out opacity-0"
      id="menu-content-«r1»"
      role="menu"
      style="top: 0px; left: 0px;"
      tabindex="-1"
    />
    <button
      aria-controls="menu-content"
      aria-expanded="false"
      aria-haspopup="menu"
      type="button"
    />
    <button
      aria-disabled="false"
      aria-label="Open medium menu"
      class="inline-flex items-center justify-center font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none active:scale-[0.98] select-none bg-coral text-white hover:bg-coral/90 focus-visible:ring-coral-soft focus-visible:ring-offset-white shadow-sm hover:shadow-md h-10 w-10 rounded-md"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-ellipsis inline-flex items-center justify-center w-5 h-5 text-neutral"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="1"
        />
        <circle
          cx="19"
          cy="12"
          r="1"
        />
        <circle
          cx="5"
          cy="12"
          r="1"
        />
      </svg>
    </button>
    <div
      aria-hidden="true"
      class="min-w-40 bg-neutral-50 text-black rounded-lg shadow-md border border-transparent py-2.5 absolute z-50 transition-opacity duration-150 ease-out opacity-0"
      id="menu-content-«r2»"
      role="menu"
      style="top: 0px; left: 0px;"
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;
